--- a/index.html
+++ b/index.html
@@ -5,26 +5,35 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <a id="high_contrast_theme"></a>
-    <div id="website">
-    <div id="Name"><a href="https://github.com/paczek654321" target="_blank"><img src="https://avatars.githubusercontent.com/u/96132992?v=4"> <h1>Paczek</h1></a></div>
-    <div id="Projects">
-        <h1>Projects I'm a part of:</h1>
-        <ul>
-            <li><a href="https://github.com/Fntoomen/motey" target="_blank">Motey - Discord Bot</a></li>
-            <li><a href="https://paczek654321.github.io/collisions-js" target="_blank">A simple collision system made in js,<br>it has some basic engine like capabilites </a><a class="blue" target="_blank" href="https://github.com/paczek654321/collisions-js">(github)</a></li>
-            <li><a href="https://github.com/paczek654321/AutoLiker" target="_blank">AutoLiker - chrome extension for youtube</a></li>
-            <li><a href="https://github.com/paczek654321/0ad-select-all"  target="_blank">Select all - a mod for the open source game 0ad</a></li>
-        </ul>
-        <h1>Other:</h1>
-        <ul>
-            <li><a href="https://paczek1024.itch.io/" target="_blank">My itch.io page</a></li>
-        </ul>
-    </div>
-    <div id="color-presets">
-        <a href="#default_theme"><button id="default"></button></a>
-        <a href="#high_contrast_theme"><button id="high_contrast"></button></a>
-    </div>
-    </div>
+	<div id="bg_gradient"></div>
+	<div>
+		<div class="box">
+			<img src="https://avatars.githubusercontent.com/u/96132992"/>
+			<div>
+				<h2>Paczek</h2>
+				<p>
+					I'm a programmer mostly interested in gamedev, tho over the years I have tried fullstack web development, modding, mobile app development and plenty other things. I try to make all art for my projects (including music) myself with varying levels of success.
+				</p>
+				<p>
+					<a href="mailto:paczek1024@proton.me" target="_blank">paczek1024@proton.me</a><br>
+					<a href="https://paczek1024.itch.io/" target="_blank">Itch.io</a><br>
+					<a href="https://www.youtube.com/@paczek1024"  target="_blank">YouTube</a>
+				</p>
+				<p class="footnote">I use Arch BTW</p>
+			</div>
+		</div>
+		<div class="box">
+			<div>
+				<h2>JS-less Themes</h2>
+				<p>
+					This website has multiple themes that are implemented with just html and css, not a line of JS.
+				</p>
+				<div id="theme-selector">
+					<a href=""></a>
+					<a id="green_theme" href="#green_theme"></a>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
