Unify language name case in the JS-less Themes section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div>
 				<h2>JS-less Themes</h2>
 				<p>
-					This website has multiple themes that are implemented with just html and css, not a line of JS.
+					This website has multiple themes that are implemented with just HTML and CSS, not a line of JS.
 				</p>
 				<div id="theme-selector">
 					<a href=""></a>
