Disable dark reader

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="main.css">
+    <meta name="darkreader-lock">
 </head>
 <body>
 	<div id="bg_gradient"></div>
