Add github link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 				<p>
 					<a href="mailto:paczek1024@proton.me" target="_blank">paczek1024@proton.me</a><br>
 					<a href="https://paczek1024.itch.io/" target="_blank">Itch.io</a><br>
-					<a href="https://www.youtube.com/@paczek1024"  target="_blank">YouTube</a>
+					<a href="https://www.youtube.com/@paczek1024"  target="_blank">YouTube</a><br>
+					<a href="https://github.com/paczek654321"  target="_blank">itHub</a>
 				</p>
 				<p class="footnote">I use Arch BTW</p>
 			</div>
